# notebook_bot

./: .gitignore  LICENSE  pyproject.toml
notebook_bot/: main.py
