[tool.poetry]
name = "notebook_bot"
version = "0.1.0"
description = "Telegram bot for writing notes"
authors = ["NovaHFly <mugiviska@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ['notebook_bot']

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.5"
icecream = "^2.1.3"

[tool.poetry.scripts]
bot_launch = "notebook_bot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
